integration_tests/juniper_tests/fail/union/derive_enum_field.rs
#[derive(juniper::GraphQLEnum)]
pub enum Test {
    A,
    B,
}

#[derive(juniper::GraphQLUnion)]
enum Character {
    Test(Test),
}

fn main() {}
